alignment fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,5 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-height: 100vh;
 }
